Add and edit course API